# AXIS-Design-System

./: .clineignore  .dockerignore  .env.development  .env.example  .env.production  .env.staging  .gitignore  .npmrc  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  axis-ds-implementation-plan.md  changelog.md  components.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project-todo.md  pyproject.toml  render.yaml  requirements.txt  tsconfig.base.json  turbo.json  wrangler.toml
.changeset/: axis-publish-fixes.md  config.json  initial-release.md
.claude/: mcp.json  settings.json
.claude/agents/: brief_writer.md  code-reviewer.md  component-dev.md  confluence_sync.md  design-system-architect.md  docs-writer.md  external_scout.md  governance.md  interview_miner.md  library_curator.md  orchestrator.md  prompt-refinery.md  scorecard_evaluator.md  test-engineer.md  voc_analyst.md
.claude/commands/: ax-build.md  ax-component.md  ax-dev.md  ax-health.md  ax-library.md  ax-mcp.md  ax-prompt.md  ax-release.md  ax-wi-end.md  ax-wi-start.md  ax-wi.md  ax-wrap-up.md  ax_brief.md  ax_confluence.md  ax_health_check.md  ax_kpi_digest.md  ax_seminar_add.md  ax_triage.md  ax_wrap_up.md
.claude/hooks/: post_tool_use.py  pre_tool_use.py
.claude/prompts/: README.md  entity-extraction.md  entity-resolution.md  relation-extraction.md
.claude/rules/: 00-general.md  05-ssdd.md  06-sync.md  10-code-conventions.md  20-quality.md  30-security.md
.clinerules/: 00-core.md  06-sync.md  10-quality.md  20-security.md
.clinerules/workflows/: wi-implement.md  wi-pipeline.md  wi-prd.md  wi-release-notes.md  wi-test.md  wi-todo.md
.github/: pull_request_template.md  wi-mapping.json
.github/ISSUE_TEMPLATE/: external-ds-request.yml
.github/workflows/: cd-backend.yml  ci-backend.yml  evals-regression.yml  frontend.yml  publish.yml  sync-project.yml
apps/web/: .env.local.example  README.md  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
backend/agent_runtime/: event_manager.py  event_types.py  runner.py  stage_rules.py
backend/alembic/: env.py
backend/api/: deps.py  main.py  security.py
backend/core/: __init__.py  config.py  logging.py
backend/database/: __init__.py  base.py  session.py
backend/evals/: __init__.py  __main__.py  cli.py
backend/integrations/: __init__.py  file_processor.py
backend/services/: __init__.py  approval_service.py  embedding_service.py  entity_resolution_service.py  llm_extraction_service.py  notification_service.py  ontology_integration_service.py  ontology_service.py  play_sync_service.py  play_sync_triggers.py  rag_service.py  task_converter.py  todo_parser.py  todo_sync_service.py  webhook_processor.py
boilerplate/: .env.example  .gitignore  CLAUDE.md  SETUP.md  package.json  pyproject.toml
boilerplate/.claude/: settings.json
boilerplate/.claude/agents/: _AGENT_TEMPLATE.md  orchestrator.md
boilerplate/.claude/commands/: _command_template.md
boilerplate/.claude/prompts/: entity-extraction.md  entity-resolution.md  relation-extraction.md
boilerplate/.claude/skills/_skill-template/: SKILL.md
boilerplate/.claude/skills/wrap-up/: SKILL.md
boilerplate/backend/: __init__.py
boilerplate/backend/agent_runtime/: __init__.py
boilerplate/backend/agent_runtime/ontology/: __init__.py  validator.py
boilerplate/backend/database/: base.py
boilerplate/backend/database/models/: __init__.py  entity.py  triple.py
boilerplate/evals/: README.md
boilerplate/evals/rubrics/: _rubric_template.md
boilerplate/evals/schemas/: suite.schema.json  task.schema.json
boilerplate/evals/suites/regression/: _suite_template.yaml
boilerplate/evals/tasks/workflow/: _task_template.yaml
docs/: AI 툴 설정.md  DEMO_SCENARIOS.md  INDEX.md  OPERATIONS_GUIDE.md  POC_PRESENTATION.md  TROUBLESHOOTING.md  USER_GUIDE.md  axis_ds_mcp_template_plan_v0.3.md  thoughtandaction_axis_ds_mcp_package_plan_v0.2.md
docs/archive/: confluence-update-plan-v0.1.md  initial-scaffold-v0.1.md  installation-status-v0.1.md
docs/demo-data/: README.md  api_calls.sh  scenario1_seminar.json  scenario2_voc.csv  scenario2_voc_analysis.json  scenario3_inbound.json
docs/guides/: agentic-ui-design.md  claude-workflow.md  component-usage.md  library-curator-agent.md  monorepo-setup.md  quick-start.md  theme-customization.md  troubleshooting.md
docs/specs/: library-curator-agent.md  ontology-v2-design.md
docs/templates/: adr.md  component-prd.md  component-spec.md  plan.md  release-notes.md  testplan.md  todo.md
docs/workitems/: README.md
evals/: README.md
evals/rubrics/: brief_quality.md
evals/schemas/: grader.schema.json  suite.schema.json  task.schema.json
examples/: v0-sample.axis.tsx  v0-sample.tsx
examples/nextjs-app/: CHANGELOG.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
public/r/: agentic-code-block.json  agentic-context-panel.json  agentic-plan-card.json  agentic-recovery-banner.json  agentic-run-progress.json  agentic-source-panel.json  agentic-thinking-indicator.json  card.json  registry.json  select.json  separator.json  tabs.json
scripts/: __init__.py  build-registry.mjs  check-licenses.mjs  create_admin.py  create_migration.py  guard-pnpm-publish.mjs  index_entities.py  load_play_data_to_db.py  pack-smoke.mjs  play_data.json  sync_version.py  test_seminar_collectors.py  update_confluence_play_db.py
tests/: conftest.py  test_agents.py
tests/e2e/: __init__.py  test_api_integration.py  test_e2e_flows.py  test_sse_stream.py
tests/fixtures/: sample_agents.py  sample_markdown.py
tests/integration/: test_ontology_integration.py
tests/loadtest/: __init__.py  locustfile.py  run_loadtest.sh
tests/unit/: test_activity_repository.py  test_api_routers.py  test_confluence_mcp.py  test_embedding_service.py  test_entity_resolution_service.py  test_evals_cli.py  test_evals_loaders.py  test_evals_models.py  test_event_manager.py  test_external_collectors.py  test_llm_extraction_service.py  test_ontology_integration_service.py  (+13 more)
(+467 files in other folders)
